package jp.pgw.lab78.androrm.annotation

/**
 * ## PrimaryKey アノテーション
 */
@Target(AnnotationTarget.PROPERTY)
@Retention(AnnotationRetention.RUNTIME)
annotation class PrimaryKey
