@startuml
skinparam classAttributeIconSize 0

package "Annotations" {
  class Table {
    + name: String = ""
    + toSnake: Boolean = true
  }
  class TableColumns {
    + toSnake: Boolean = true
  }
  class PrimaryKey
  class Column {
    + name: String = ""
  }
}

class Personal {
  + personalId: Int {PK}
  + personalName: String
  + address: String
  + telephone: String
}
Personal --|> Table
Personal --|> TableColumns

class Employee {
  + employeeId: Int {PK}
  + ownDepartment: String
  + managerialPosition: String
  + dateOfEnteringCompany: Date
}
Employee --|> Table
Employee --|> TableColumns
Employee ..|> Column : uses

class Utils {
  + toSnakeCase(): String
  + mapKotlinTypeToSqlType(kotlinType: KType): String
}

class QueryBuilder {
  + select(vararg columns: String): QueryBuilder
  + from(tableName: String): QueryBuilder
  + where(condition: String): QueryBuilder
  + build(): String
}

class DatabaseHelper {
  + onCreate(db: SQLiteDatabase)
  + onUpgrade(db: SQLiteDatabase, oldVersion: Int, newVersion: Int)
}

Personal <-- DatabaseHelper : manages
Employee <-- DatabaseHelper : manages
QueryBuilder --> Personal : queries
QueryBuilder --> Employee : queries

@enduml
